res/examples/invalid/block_expr_mismatch_return_identifier_declared_in_body.eg
let a: number = {
    let a: string = "foo";

    a
};

// out: TypeError: mismatched types: expected type `number` but received `string`
// TODO: See: https://github.com/egonlang/egonlang/issues/19